--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <title>Convo</title>
 </head>
 <body id="app">
-    <div class="container border" style="height: 100vh">
+    <div class="container" style="height: 100vh">
         <div class=" d-flex justify-content-center" style="height: 90vh">
             <div class="w-75 p-3  overflow-auto"  id="user">
 
